update hyperlink in search.jsp

--- a/src/main/webapp/search.html
+++ b/src/main/webapp/search.html
@@ -22,13 +22,13 @@
     <div class="navbar-collapse" id="app-options">
       <ul class="nav navbar-nav navbar-app-select">
         <li>
-          <a href="index.html" class="nav-logo font-logo">L<span class="visible-xs-inline">eanCloud</span></a>
+          <a href="https://leancloud.cn" class="nav-logo font-logo">L<span class="visible-xs-inline">eanCloud</span></a>
         </li>
       </ul>
       <div class="navbar-app-actions-wrap">
         <ul class="nav navbar-nav navbar-app-actions">
           <li class="dropdown dropdown-toggle-app-name">
-            <a href="index.html">
+            <a href="https://leancloud.cn/docs/">
               <i class="icon icon-dashbd-icon icon-home"></i>
               <div class="name">文档首页</div>
             </a>
@@ -81,7 +81,7 @@
   <div class="search-content">
     <c:forEach items="${results}" var="doc">
       <div class="search-item" ng-repeat="doc in searchResults">
-        <h4 class="search-title text-ellipse"><a href="${doc.url}" ng-bind-html="">${doc.title}</a>(score: ${doc.score})</h4>
+        <h4 class="search-title text-ellipse"><a href="${doc.url}" ng-bind-html="">${doc.title}</a></h4>
         <p class="search-context" ng-bind-html=" | to_trusted">${doc.highlighter}</p>
         <hr>
       </div>
