--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -197,7 +197,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand nav-logo font-logo" title="LeanCloud 官网">LeanCloud</a>
+      <a href="https://leancloud.cn" class="navbar-brand nav-logo font-logo" title="LeanCloud 官网">LeanCloud</a>
     </div>
 
     <div class="collapse navbar-collapse" id="app-options">
